--- a/tip/560.md
+++ b/tip/560.md
@@ -170,12 +170,12 @@ hyphen-removed version of the name):
   description of the parts of the option descriptor that do not change. In
   particular:
   
-  For ordinary options, this is a list of three items; these are the option
-  database name of the option, the option database class of the option, and
-  the actual default value of the option.
+    For ordinary options, this is a list of three items; these are the option
+    database name of the option, the option database class of the option, and
+    the actual default value of the option.
   
-  For aliases, this is a single-element list containing the name of the target
-  option.
+    For aliases, this is a single-element list containing the name of the
+    target option.
 
 * **&lt;OptValidate-**_name_**&gt;** — takes a single value, checks whether
   the value is of the type of the option, and returns the normalized option
@@ -189,12 +189,16 @@ hyphen-removed version of the name):
   providing implementations in C on a case-by-case basis relatively straight
   forward.
 
+    The default implementation forwards to the **&lt;StdOptRead&gt;** method.
+
 * **&lt;OptWrite-**_name_**&gt;** — how to actually write the option to
   whatever storage it is implemented with. Takes a single argument, the value
   to write (after validation and normalization). Return value is ignored.
   Note that if a method exists with this name in the class, it is _not_
   overridden by the **option** declaration; this makes providing
   implementations in C on a case-by-case basis relatively straight forward.
+
+    The default implementation forwards to the **&lt;StdOptWrite&gt;** method.
 
 The _default storage mechanism_ for options will be the array in the object
 instance with the empty local name (so the option `foo` will be in array
@@ -207,9 +211,9 @@ methods, for which there are these implementations provided by default:
   inside. It is never called with the name of an alias. (The
   **&lt;OptRead-**_name_**&gt;** methods described above delegate to this.)
 
-  If an implementation provides custom readers for each option so that it goes
-  to the right slot in a C structure, it does not need to provide an override
-  of this method.
+    If an implementation provides custom readers for each option so that it
+    goes to the right slot in a C structure, it does not need to provide an
+    override of this method.
 
 * **&lt;StdOptWrite&gt;** — This method writes an element of the array. It
   takes a two arguments, the full name of the element and the value to write.
@@ -217,9 +221,9 @@ methods, for which there are these implementations provided by default:
   (The **&lt;OptWrite-**_name_**&gt;** methods described above delegate to
   this.)
 
-  If an implementation provides custom writers for each option so that it
-  comes from the right slot in a C structure, it does not need to provide an
-  override of this method.
+    If an implementation provides custom writers for each option so that it
+    comes from the right slot in a C structure, it does not need to provide an
+    override of this method.
 
 * **&lt;OptionsMakeCheckpoint&gt;** — This method saves the state so that it
   may be restored. It takes no arguments and returns the saved state that can
@@ -230,9 +234,10 @@ methods, for which there are these implementations provided by default:
   overriding implementation _should_ include the superclass's checkpoint state
   in its own checkpoint state (calling via **next**).
 
-  If _any_ options are implemented with C backing store, an override for this
-  method _should_ be provided. Note that this means that it is probably unwise
-  to override this method and not **&lt;OptionsRestoreCheckpoint&gt;**.
+    If _any_ options are implemented with C backing store, an override for
+    this method _should_ be provided. Note that this means that it is probably
+    unwise to override this method and not
+    **&lt;OptionsRestoreCheckpoint&gt;**.
 
 * **&lt;OptionsRestoreCheckpoint&gt;** — This method restores a saved state
   created with **&lt;OptionsMakeCheckpoint&gt;**. It takes a single argument,
@@ -242,9 +247,10 @@ methods, for which there are these implementations provided by default:
   implementation should also call the superclass's implementation (calling via
   **next**) to restore that portion of the checkpointed state.
 
-  If _any_ options are implemented with C backing store, an override for this
-  method _should_ be provided.  Note that this means that it is probably
-  unwise to override this method and not **&lt;OptionsMakeCheckpoint&gt;**.
+    If _any_ options are implemented with C backing store, an override for
+    this method _should_ be provided.  Note that this means that it is
+    probably unwise to override this method and not
+    **&lt;OptionsMakeCheckpoint&gt;**.
 
 Note that **Initialise** requires an existing widget name. A consequence of
 that is that any true initialisation-only options that need to be passed to
@@ -289,23 +295,27 @@ The standard types will be:
 * **integer**: any integer (i.e., acceptable to **string is entier
   -strict**). Defaults to **0**.
 
-* **zinteger**: any integer (as above) or empty string. Defaults to the empty string.
+* **zinteger**: any integer (as above) or empty string. Defaults to the empty
+  string.
 
 * **float**: any float (except NaN) acceptable to **string is double
   -strict**. Defaults to **0.0**.
 
-* **zfloat**: any float (as above) or empty string. Defaults to the empty string.
+* **zfloat**: any float (as above) or empty string. Defaults to the empty
+  string.
 
 * **distance**: any screen distance (as parsed by **winfo fpixels**). Defaults
   to **0px**.
 
-* **image**: name of any Tk image, or empty string. Defaults to the empty string.
+* **image**: name of any Tk image, or empty string. Defaults to the empty
+  string.
 
 * **color**: any color (as parsed by **winfo rgb**). Defaults to **black**.
 
 * **zcolor**: any color, or empty string. Defaults to the empty string.
 
-* **font**: any font (as parsed by **font actual**). Defaults to **TkDefaultFont**.
+* **font**: any font (as parsed by **font actual**). Defaults to
+  **TkDefaultFont**.
 
 * **relief**: any relief (**flat**, **groove**, **raised**, **ridge**,
   **solid**, or **sunken**) or unambiguous prefix. Defaults to **flat**.
@@ -318,7 +328,8 @@ The standard types will be:
 
 * **list**: any valid Tcl list. Defaults to the empty list (and empty string).
 
-* **dict**: any valid Tcl dictionary. Defaults to the empty dict (and empty string).
+* **dict**: any valid Tcl dictionary. Defaults to the empty dict (and empty
+  string).
 
 The official mechanism for adding a new type will be via the class
 **tk::optiontype**. Instances of that will automatically plug themselves
@@ -365,17 +376,17 @@ described above:
 
 When a type is created with **tk::optiontype createthrow**, the test instead
 is expected to throw an error on failure. Because this can be more complex, we
-assume that the value being tested is passed in the (local) variable
-`$value`. An example of the use is this, which makes the **distance** type
-described above:
+assume that the value being tested is passed in the (local) variable `$value`.
+An example of the use is this, which makes the **distance** type described
+above:
 
     tk::optiontype createthrow distance "0px" {
         winfo fpixels . $value
     }
 
-When a type is created with **tk::optiontype createtable**, the test is
-driven by **tcl::prefix match** and all the caller has to do is supply the
-table. An example of this one is:
+When a type is created with **tk::optiontype createtable**, the test is driven
+by **tcl::prefix match** and all the caller has to do is supply the table.  An
+example of this one is:
 
     tk::optiontype createtable justify "left" {
         center left right
