Change class names. Describe what happens when option DB produces a bad value

--- a/tip/560.md
+++ b/tip/560.md
@@ -60,22 +60,35 @@ support for that.
 
 # Specification
 
-Tk will supply a TclOO class, **tk::configurable**, that classes may inherit
+Tk will supply a TclOO class, **tk::Configurable**, that classes may inherit
 from to gain a **configure** and a **cget** method, as well as a non-exported
 **Initialise** method (that may only be called once; subsequent calls will do
 nothing) intended to be used from constructors, and a non-exported
 **PostConfigure** method intended as a point for user- and
 subclass-interception. In addition, Tk will supply a metaclass,
-**tk::megawidget**, that will allow the creation of definitions suitable for
-configuration (that class may gain other behaviours in the future) with the
-**option** declaration (note that this isn't the built-in **option** command,
-but has the same name so that options are always called that). As with the
-**oo::configurable** metaclass, option names will be given without leading
-hyphens when they are specified.
+**tk::configurable** (notice the capitalisation difference), that will allow
+the creation of definitions suitable for configuration (that class may gain
+other behaviours in the future) with the **option** declaration (note that
+this isn't the built-in **option** command, but has the same name so that
+options are always called that). As with the **oo::configurable** metaclass,
+option names will be given without leading hyphens when they are
+specified. Classes created with **tk::configurable** will have
+**tk::Configurable** mixed in.
 
-    tk::megawidget create myLabel {
-        superclass tk::configurable
+An example of use of this:
 
+    tk::configurable create myLabel {
+        # Conventional setup of constructor/destructor
+        variable window
+        constructor {w args} {
+            set window [label $w]
+            my Initialise $w {*}$args
+        }
+        destructor {
+            destroy $window
+        }
+
+        # Define some options for this class
         option label
         option borderwidth -type distance -default 1px \
             -name borderWidth -class BorderWidth
@@ -85,33 +98,40 @@ hyphens when they are specified.
 As we can see from this, we want to support some configuration properties for
 an option. The full list (not fully shown above) is:
 
-* **-name** *optName*
+* **-name** _optName_
 
     This gives the name used for looking up a default in the option database.
     It defaults to the main name of the option with **string tolower** applied
     to it.
 
-* **-class** *clsName*
+* **-class** _clsName_
 
     This gives the class name used for looking up a default in the option
     database (this is not a TclOO name). It defaults to the main name of the
     option with **string totitle** applied to it.
 
-* **-default** *value*
+* **-default** _value_
 
     The default value of the option, used when no other default is available.
-    Its default will depend on the type of the option (see below), but is
-    usually either the empty string or a zero value. The default will be
-    validated against the type.
+    When this option is not present, the default will depend on the type of
+    the option (see below), but is usually either the empty string or a zero
+    value. The default will be validated against the type (see below); it is
+    an error for the default to be not type-valid.
 
-* **-type** *typeName*
+* **-type** _typeName_
 
     The type of the value. The types will be subcommands of an ensemble (see
     **Option Types** below) that will provide defaults and validation. The
     default type will be **string**, which will do no validation and use a
     default that is empty.
 
-* **-initonly** *boolean*
+    Defaults from the option database (read during **Initialise**) are subject
+    to validation by the type, but if the default from the option database
+    fails validation, it is ignored and does not trigger a failure of the
+    megawidget to initialise.  This is because the option database is not
+    wholly under script control.
+
+* **-initonly** _boolean_
 
     Controls whether this is an initialisation only option. Initialisation
     only options may only be set by the **Initialise** method, and not by
@@ -120,7 +140,7 @@ an option. The full list (not fully shown above) is:
     not initialisation only by default; this is expected to be a rare use
     case.
 
-* **-alias** *optionName*
+* **-alias** _optionName_
 
     Makes this option an alias for another option, which must exist at this
     point (for sanity's sake if nothing else). The other configuration
@@ -277,8 +297,8 @@ there is no need to make either of these commands aware of which class or
 instance they’re being used with; types are independent of how they are used
 and these defaults can be overridden when the option is created.)
 
-For example, this will allow the validation of a proposed value, *$foobar*,
-for an option of type *$gorp*, to be done by calling:
+For example, this will allow the validation of a proposed value, _$foobar_,
+for an option of type _$gorp_, to be done by calling:
 
     tk::OptionType $gorp validate $foobar
 
