--- a/tip/562.md
+++ b/tip/562.md
@@ -16,9 +16,24 @@ This TIP proposes to deprecate channel types 1-4, and remove it completely
 for Tcl 9.0. Only channels with type `TCL_CHANNEL_VERSION_5` will be
 accepted by Tcl 9.0. Also, for Tcl 9.0, the `seekProc` and `closeProc`
 will no longer be used, `wideSeekProc` and `close2Proc` will be used
-in stead. Any Tcl 8.6 channel with version `TCL_CHANNEL_VERSION_5`
-implementing `wideSeekProc` and `close2Proc` will be source-compatible
-with Tcl 9.0 and continue to work unchanged.
+in stead. Any Tcl 8.x channel with version `TCL_CHANNEL_VERSION_5`
+implementing `wideSeekProc` (if it has seek functionalty) and
+`close2Proc` will be source-compatible with Tcl 9.0 and continue
+to work unchanged.
+
+# Proposal
+
+In Tcl 9.0, the symbols `TCL_CHANNEL_VERSION_1` up to `TCL_CHANNEL_VERSION_4`,
+and the symbol `TCL_CLOSE2PROC`, will be removed from tcl.h. All related
+code will be removed too. Besides, all core code calling the
+`closeProc`/`seekProc` will be modified to call `close2Proc`/`wideSeekProc`
+directly, without special version checks.
+
+In Tcl 8.7, the symbols `TCL_CHANNEL_VERSION_1` up to `TCL_CHANNEL_VERSION_4`
+will be deprecated. The restriction in Tcl 8.6 that if `wideSeekProc` is
+available then `seekProc` must be available as well, will be lifted in Tcl 8.7.
+Also, the restriction that 'closeProc' must be available will be lifted
+in Tcl 8.7: `NULL` will have the same meaning as `TCL_CLOSE2PROC`.
 
 # Rationale and Discussion
 
@@ -38,11 +53,19 @@ implemented `seekProc` should be implemented as well. We cannot
 change that any more in Tcl 8.6.
 
 Further on, for Tcl 9.0 channels, `close2Proc` is required,
-`closeProc` will not be used any more. So any channel compatible
-with both Tcl 8.x and Tcl 9.0 needs to implement both `closeProc`
-and `close2Proc`. If your Tcl 8.6-compatible channel doesn't
-implement `close2Proc` yet, you can add an implementation as
-follows:
+`closeProc` will not be used any more.
+
+## Incompatibilities
+
+All extensions using `TCL_CHANNEL_VERSION_1` up to `TCL_CHANNEL_VERSION_4` will
+not work any more in Tcl 9.0. Also channels which implement `closeProc` but
+not `close2Proc`, or `seekProc` but not `wideSeekProc` will not work
+as expected any more: They cannot be closed/cannot seek any more.
+
+So any channel compatible with both Tcl 8.x and Tcl 9.0 needs
+to implement both `closeProc` and `close2Proc`. If your Tcl
+8.6-compatible channel doesn't implement `close2Proc` yet,
+you can add a simple implementation as follows:
 
 <pre>
 static int close2Proc(
@@ -57,16 +80,9 @@ static int close2Proc(
 }
 </pre>
 
-# Proposal
-
-TODO
-
-## Incompatibilities
-
-TODO
-
 # Implementation
 
+See branch _deprecate-channel-type-1-4_
 
 # Copyright
 
