Explain Ttk_GetOrientFromObj() change and C-flags "-Wall -Wextra -Wwrite-strings -Wpointer-arith"

--- a/tip/557.md
+++ b/tip/557.md
@@ -31,14 +31,27 @@ The Tcl source-code has been strictified in the following ways:
    any more to a variable of another type. This situation requires a type cast from
    now on in the Tcl core.
 
+ * All core C-code now compiles warning-free when using the (gcc) options
+   `-Wall -Wextra -Wwrite-strings -Wpointer-arith`.
+
  * Travis build sections are added, which compile Tcl with g++ (UNIX/Windows). So,
    any future commit which violates C++ compilation will lead to a failed build.
 
-Nothing is done yet in the Tcl code to handled C++ exception, neither is any of the
+Nothing is done yet in the Tcl code to handle C++ exception, neither is any of the
 API now available as C++ classes.
 
 Tk has a `cplusplus` branch as well, doing the same. This work is complete for
-UNIX, but not yet for Windows and MacOSX.
+UNIX, but not yet for Windows and MacOS.
+
+# Caveats
+
+C++ is more strict in using enum's than C is. Enums cannot be stored in
+ints (and reverse) without type casts in C++. Tcl doesn't use enums, but there
+was one external API function (in ttk) which actually used enum but
+its argument in the public API was int: `Ttk_GetOrientFromObj`.
+This TIP deprecates `Ttk_GetOrientFromObj`, and adds a new internal
+function `TtkGetOrientFromObj` with the correct signature. I didn't
+find any extension using `Ttk_GetOrientFromObj`.
 
 # Copyright
 
