To achieve symmetry, shift-scroll wheel also scrolls vertical scrollbars

--- a/tip/563.md
+++ b/tip/563.md
@@ -11,12 +11,14 @@
 
 # Abstract
 
-Horizontal scrollbars require the shift key to be scrolled by a scrollwheel.
-The proposal is to scroll a horizontal scrollbar also without shift by the scrollwheel.
+Horizontal scrollbars require the shift key to be scrolled by a scroll wheel.
+The proposal is to scroll a horizontal scrollbar also without shift by the scroll wheel.
 
 # Specification
 
-The widgets **scrollbar** and **ttk::scrollbar** with *-orient horizontal* parameter feature the same scrollwheel binding without modifier *shift* (which is currently a no-op) as with modifier *shift*.
+The widgets **scrollbar** and **ttk::scrollbar** with *-orient horizontal* parameter feature the same scroll wheel binding without modifier *shift* (which is currently a no-op) as with modifier *shift*.
+
+To achieve symmetry, the same widgets, but with *-orient vertical* should also scroll with modifier *shift* (which is currently a no-op).
 
 # Rationale
 
@@ -27,9 +29,9 @@ Scrollwheel scrolling direction within Tk is assigned as follows:
 
 This is a very clear rule.
 
-When the mouse pointer is over a horizontal scrollbar, the scrollwheel without shift modifier is inactive. There is never a vertical scrolling on a horizontal scrollbar.
+When the mouse pointer is over a horizontal scrollbar, the scroll wheel without shift modifier is inactive. There is never a vertical scrolling on a horizontal scrollbar.
 
-I find it intuitive that the scrollwheel without modifier should scroll a horizontal scrollbar.
+I find it intuitive that the scroll wheel without modifier should scroll a horizontal scrollbar.
 
 Here is some code to test:
 
