#564 and #565 now in voting state

--- a/tip/564.md
+++ b/tip/564.md
@@ -2,7 +2,7 @@
 	Author:         Francois Vogel <fvogelnew1@free.fr>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        9-Feb-2020
 	Post-History:   
 	Keywords:       Tk Ttk x11 font size
