--- a/tip/552.md
+++ b/tip/552.md
@@ -40,8 +40,10 @@ Adds the ability to lock the first item(s) from vertical scrolling.
 
 A new option **-titleitems** *n* is added, requesting items to be locked.
 
-TBD how this interacts with any hierarchy in those first lines.
-TBD how this interacts with striped rows.
+Any individual item's visual appearance is not affected by this, just if it is shown
+or not. Thus if a hierarchy crosses the titleitem boundary it looks weird but
+works. If striped rows are used and the title items have default colors, it looks
+weird but works.  Both those usages fall under "Don't do that then".
 
 ## Cell selection
 
