Describe supporting change to [option get] and add xref to stooop

--- a/tip/560.md
+++ b/tip/560.md
@@ -209,7 +209,8 @@ hyphen-removed version of the name):
   providing implementations in C on a case-by-case basis relatively straight
   forward.
 
-    The default implementation forwards to the **&lt;StdOptRead&gt;** method.
+    The default implementation forwards to the **&lt;StdOptRead&gt;**
+    method (see below).
 
 * **&lt;OptWrite-**_name_**&gt;** — how to actually write the option to
   whatever storage it is implemented with. Takes a single argument, the value
@@ -218,13 +219,16 @@ hyphen-removed version of the name):
   overridden by the **option** declaration; this makes providing
   implementations in C on a case-by-case basis relatively straight forward.
 
-    The default implementation forwards to the **&lt;StdOptWrite&gt;** method.
+    The default implementation forwards to the **&lt;StdOptWrite&gt;**
+    method (see below).
 
 The _default storage mechanism_ for options will be the array in the object
 instance with the empty local name (so the option `foo` will be in array
 element variable `(foo)` in the instance namespace; this is a trick stolen
-from stooop). This can be overridden by defining appropriate non-exported
-methods, for which there are these implementations provided by default:
+from
+[stooop](https://core.tcl-lang.org/tcllib/doc/trunk/embedded/md/tcllib/files/modules/stooop/stooop.md)).
+This can be overridden by defining appropriate non-exported methods, for which
+there are these implementations provided by default:
 
 * **&lt;StdOptRead&gt;** — This method reads an element of the array. It takes
   a single argument, the full name of the element, and returns the value
@@ -278,6 +282,23 @@ that widget must be manually parsed before the widget is created (_or_ the
 widget can be created, used for parsing, and then destroyed and rebuilt with
 the correct options; that's not too expensive if the temporary widget is never
 mapped).
+
+### Supporting Changes to the Tk Core
+
+The **option get** is to gain an extra optional argument after all its current
+mandatory ones, _default_, which will be the value returned when the
+underlying call to `Tk_GetOption()` cannot find a value to return (the case
+where it returns `NULL`) and where Tk used to always return the empty string.
+Since **option get** previously did not take any optional arguments at all,
+this is a compatible change.
+
+ * **option get** _window name class_ ?_default_?
+
+The value of this change is when we have any code where we already know what
+we want to use instead (such as with the option specified in this TIP) it is
+less ambiguous to get Tk to handle the switch over to our known default value
+rather than assuming that the empty string always means that there was no
+value specified in the option database.
 
 ## Option Types
 
