TIP's #497/557/562 now in Voting state.

--- a/tip/497.md
+++ b/tip/497.md
@@ -3,7 +3,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        23-Jan-2018
 	Post-History:
 	Discussions-To: Tcl Core list
