--- a/tip/557.md
+++ b/tip/557.md
@@ -2,7 +2,7 @@
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
 	State:          Draft
 	Type:           Project
-	Vote:           Done
+	Vote:           In progress
 	Created:        13-Dec-2019
 	Post-History:
 	Keywords:       Tcl
