--- a/tip/562.md
+++ b/tip/562.md
@@ -2,7 +2,7 @@
         Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
         State:          Draft
         Type:           Project
-        Vote:           Pending
+        Vote:           In progress
         Created:        31-Jan-2020
         Post-History:
         Tcl-Version:    8.7
