--- a/tip/556.md
+++ b/tip/556.md
@@ -22,24 +22,23 @@ This tip proposes to add the following oo class widget commands and functions to
 
 **::tko::labelframe** *pathName ?option value? ..*
 
-The new widgets will contain the same functionality like the original *tk* widgets. They are *oo:class*'s and it is possible to add,change and delete methods and options dynamically. The widgets could also be used as oo *superclass*'s.
+> The new widgets will contain the same functionality like the original *tk* widgets. They are *oo:class*'s and it is possible to add,change and delete methods and options dynamically. The widgets could also be used as oo *superclass*'s.
 
-The interface functions to build new widgets in C are described in 
-[`tko.3.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.3.md).
+> The interface functions to build new widgets in C are described in [`tko.3.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.3.md).
 
 ## Tcl class creation
 
 **::oo::class create** *ooclass* { **::tko initclass** }
 
-The **tko initclass** function create on oo class with option handling.
+> The **tko initclass** function create on oo class with option handling.
 
 **::oo::class create** *widgetclass* { **::tko initfrom** *tkoclass* }
 
-The **tko initfrom** function use *tkoclass* as superclass.
+> The **tko initfrom** function use *tkoclass* as superclass.
 
 **::oo::class create** *widgetclass* { **::tko initwrap** *widget readonlyoptionlist ?commanlist?* }
 
-The **tko initwrap** function wraps an existing tk widget in an oo class widget.
+> The **tko initwrap** function wraps an existing tk widget in an oo class widget.
 
 ## Class functions
 
@@ -63,7 +62,7 @@ To provide dynamic option management at class level exists a **::tko** function.
 
 **::tko optionshow** *classname ?-option? ..*
 
-A detailed description can be found in [`tko.n.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.n.md).
+> A detailed description can be found in [`tko.n.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.n.md).
 
 ## Widget methods
 
@@ -77,7 +76,7 @@ To manage options on object level exists an **\_tko** method.
 
 **my \_tko optionshow** *-option* ..
 
-A detailed description can be found in [`tko.n.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.n.md).
+> A detailed description can be found in [`tko.n.md`](https://core.tcl-lang.org/tk/doc/tip-556/doc/tko.n.md).
 
 ## Option definitionlist
 
@@ -143,7 +142,7 @@ To compare the speed of the new widgets you can run the test frame-30.1. It will
 
 # Examples
 
-Ready to run tclkit binaries for Linux and Windows can be found [here](https://sourceforge.net/projects/kbskit/files/tip556/)
+Ready to run tclkit binaries for Linux, Windows and Mac can be found [here](https://sourceforge.net/projects/kbskit/files/tip556/)
 
     #
     # Configurable object
@@ -229,7 +228,7 @@ Ready to run tclkit binaries for Linux and Windows can be found [here](https://s
     grid [label .f.l -text abc]
     grid columnconfigure . 1 -weight 1
     option add *background blue
-    tko eventchanged
+    tko eventoption
  
 # Discussion
 
