TIP 563 in vote state

--- a/tip/563.md
+++ b/tip/563.md
@@ -2,7 +2,7 @@
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        02-Feb-2020
 	Keywords:       Tk, bindings
 	Tcl-Version:    8.7
