--- a/tip/555.md
+++ b/tip/555.md
@@ -2,7 +2,7 @@
 	Author:         Manfred Rosenberger<manfred.rosenberger@gmx.net>
 	State:          Draft
 	Type:           Project
-	Vote:           ...
+	Vote:           Pending
 	Created:        19-Nov-2019
 	Tcl-Version:	8.6
 	Post-History:
