Small changes to 558 and 560

--- a/tip/558.md
+++ b/tip/558.md
@@ -125,6 +125,22 @@ To restate: this core mechanism is just an efficient property _publication and
 discovery_ mechanism. It does not define how a property actually works. That
 is up to scripted classes that build on this.
 
+### Related Bugfix
+
+In the process of creating this TIP and [its companion](560.md), it has been
+found that TclOO slots are significantly easier to use without error with the
+addition of an extra operation:
+
+* _slot_ **-appendifnew** ?_item ..._?
+
+    This adds each specified _item_ (an arbitrary number) to the end of the
+    slot called _slot_ if they are not already present in the slot.
+
+This also allows for the fixing of a number of lurking bugs in the
+[TIP #500](500.md) implementation. Note that the bugs only tend to be exposed
+when doing comparatively intense and complex TclOO use with superclasses and
+mixins defined by metaclasses.
+
 ## Interface for Ordinary Scripts
 
 Making use of these basic capabilities (themselves intended to be usable with
