--- a/tip/560.md
+++ b/tip/560.md
@@ -283,6 +283,13 @@ widget can be created, used for parsing, and then destroyed and rebuilt with
 the correct options; that's not too expensive if the temporary widget is never
 mapped).
 
+Note also that the implementations of **&lt;StdOptRead&gt;**,
+**&lt;StdOptWrite&gt;**, **&lt;OptionsMakeCheckpoint&gt;**,
+**&lt;OptionsRestoreCheckpoint&gt;**, and **PostConfigure** are installed in a
+place in the class hierarchy where it is maximally easy for instances of
+**tk::configurable** to override. Their implementation class is
+**::tk::ConfigurableStandardImplementations**.
+
 ### Supporting Changes to the Tk Core
 
 The **option get** is to gain an extra optional argument after all its current
