Let the name of the virtual event render in #552

--- a/tip/552.md
+++ b/tip/552.md
@@ -64,7 +64,7 @@ The **identify** subcommand is updated with the **cell** option.
 
 Default bindings are updated to use these features.
 
-The <<TreeviewSelect>> virtual event triggers on any selection change including cellselection.
+The \<\<TreeviewSelect\>\> virtual event triggers on any selection change including cellselection.
 
 ## Striped rows
 
