TIP #564 accepted 7/0/0: YES: 7 (Decoster, Griffin, Kenny, Landers, Nijtmans, Walzer, Vogel). NO: -. PRESENT: -. Vote conclusion email was sent 22-Feb-2020 to Tcl Core list. Implementation was merged the same day.

--- a/tip/564.md
+++ b/tip/564.md
@@ -1,8 +1,8 @@
 # TIP 564: ttk font sizes in points
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        9-Feb-2020
 	Post-History:   
 	Keywords:       Tk Ttk x11 font size
