TIP #565 accepted 7/0/0: YES: 7 (Decoster, Griffin, Kenny, Landers, Nijtmans, Walzer, Vogel). NO: -. PRESENT: -. Vote conclusion email was sent 22-Feb-2020 to Tcl Core list. Implementation was merged the same day.

--- a/tip/565.md
+++ b/tip/565.md
@@ -1,8 +1,8 @@
 # TIP 565: .canvas raise/lower ignore non-existent tag
 	Author:         Francois Vogel <fvogelnew1@free.fr>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        10-Feb-2020
 	Post-History:   
 	Keywords:       Tk canvas
