--- a/tip/567.md
+++ b/tip/567.md
@@ -2,7 +2,7 @@
         Author:         Donal K. Fellows <donal.k.fellows@manchester.ac.uk>
         State:          Draft
         Type:           Project
-        Vote:           Pending
+        Vote:           In progress
         Created:        22-Feb-2020
         Post-History:
         Tcl-Version:    8.7
