Added implementation branch link

--- a/tip/567.md
+++ b/tip/567.md
@@ -7,6 +7,7 @@
         Post-History:
         Tcl-Version:    8.7
         Keywords:       Tcl, TclOO, slots
+        Tcl-Branch:     tip-567
 -----
 
 # Abstract
@@ -40,9 +41,13 @@ The following method will be added to the class **::oo::Slot**:
     If any _arg_ is not a valid item for _slot_, an error message will be
     generated. The result will be the empty string on success.
 
+The slots containing classes (specifically **superclass** and **mixin**, the
+latter on both classes and instances) additionally gain the requirement that
+their elements be unique within the slot.
+
 # Implementation
 
-The implementation is simply this:
+The core of the implementation is simply this:
 
     method -appendifnew -export args {
         set my [namespace which my]
@@ -56,8 +61,8 @@ The implementation is simply this:
         tailcall my Set $current
     }
 
-An integrated version with documentation and testing is on the implemenation
-branch for [TIP #558](558.md), but that is mixed with many other things.
+The full implementation (including a number of bugfixes enabled by this) is on
+the [`tip-567`](https://core.tcl-lang.org/tcl/timeline?r=tip-567) branch.
 
 # Copyright
 
