TIP #563 accepted 7/0/0 Yes: FV, SL, KK, JD, BG, JN, KW

--- a/tip/563.md
+++ b/tip/563.md
@@ -1,12 +1,16 @@
 # TIP 563: scrollwheel on horizontal scrollbar scrolls without shift too
 	Author:         Harald Oehlmann <oehhar@users.sourceforge.net>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        02-Feb-2020
 	Keywords:       Tk, bindings
 	Tcl-Version:    8.7
 	Tk-Branch:      tip-563-scrollbar-scrollwheel
+	Vote-Summary:	Accepted 9/0/0
+	Votes-For:	FV, SL, KK, JD, BG, JN, KW
+	Votes-Against:	none
+	Votes-Present:	none
 -----
 
 # Abstract
