Added two more option types to 560

--- a/tip/560.md
+++ b/tip/560.md
@@ -374,6 +374,12 @@ The standard types will be:
 * **anchor**: any anchor (**n**, **ne**, **e**, **se**, **s**, **sw**, **w**,
   **nw**, or **center**) or unambiguous prefix. Defaults to **center**.
 
+* **window**: any existing window path name, or empty string. Defaults to the
+  empty string.
+
+* **cursor**: any of the forms acceptable as a cursor on the current platform,
+  or the empty string. Defaults to the empty string.
+
 * **list**: any valid Tcl list. Defaults to the empty list (and empty string).
 
 * **dict**: any valid Tcl dictionary. Defaults to the empty dict (and empty
