Update 552 to match current implementation

--- a/tip/552.md
+++ b/tip/552.md
@@ -54,8 +54,17 @@ Cell selection is independent of item selection.
 Cells are identified with a two element list with item id and column id.
 
 A new subcommand **cellselection** is added, mirroring the present **selection**.
-In addition the **cellselection set** and **cellselection add** commands get
-a version for selecting a rectangular range.
+In addition the **cellselection** commands get
+a version with two arguments for selecting/modifying a rectangular range.
+
+Since for **selection** the itemList can also be a single item (by nature of
+how lists work for simple values), this is also allowed for a cellList since
+a two cell list can be clearly distinguished from the two element list that
+is one cell.
+
+Only cells in displayed columns are allowed to be selected. Any change to
+**-columns** or **-displaycolumns** clears the cell selection to avoid
+ambiguous state.
 
 A new option **-selecttype** *type* is added to direct default bindings to
 use either item selection or cell selection. It takes values `item` or `cell`.
