--- a/tip/497.md
+++ b/tip/497.md
@@ -1,15 +1,18 @@
 # TIP 497: Full support for Unicode planes 1-16.
-	Author:         Jan Nijtmans <jan.nijtmans@users.sf.net>
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        23-Jan-2018
 	Post-History:
 	Discussions-To: Tcl Core list
 	Keywords:       Tcl
 	Tcl-Version:    9.0
 	Tcl-Branch:     tip-497
+	Vote-Summary:	Accepted 5/0/1
+	Votes-For:		DKF, FV, JN, KW, SL
+	Votes-Against:	none
+	Votes-Present:	DGP
 -----
 
 # Abstract
