--- a/tip/557.md
+++ b/tip/557.md
@@ -1,13 +1,17 @@
 # TIP 557: C++ support for Tcl
 	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-	State:          Draft
+	State:          Final
 	Type:           Project
-	Vote:           In progress
+	Vote:           Done
 	Created:        13-Dec-2019
 	Post-History:
 	Keywords:       Tcl
 	Tcl-Version:    8.7
 	Tcl-Branch:     cplusplus
+	Vote-Summary:	Accepted 2/0/3
+	Votes-For:	JN, KW
+	Votes-Against:	none
+	Votes-Present:	DGP, FV, SL
 -----
 
 # Abstract
