--- a/tip/562.md
+++ b/tip/562.md
@@ -1,13 +1,17 @@
 # TIP 562: Deprecate channel types 1-4
-        Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
-        State:          Draft
-        Type:           Project
-        Vote:           In progress
-        Created:        31-Jan-2020
-        Post-History:
-        Tcl-Version:    8.7
-        Keywords:       Tcl
-        Tcl-Branch:     deprecate-channel-type-1-4
+	Author:         Jan Nijtmans <jan.nijtmans@gmail.com>
+	State:          Final
+	Type:           Project
+	Vote:           Done
+	Created:        31-Jan-2020
+	Post-History:
+	Tcl-Version:    8.7
+	Keywords:       Tcl
+	Tcl-Branch:     deprecate-channel-type-1-4
+	Vote-Summary:	Accepted 3/0/3
+	Votes-For:		DGP, DKF, JN
+	Votes-Against:	none
+	Votes-Present:	FV, KW, SL
 -----
 
 # Abstract
