Correct Kevin Kenny's vote contribution. Sorry!

--- a/tip/497.md
+++ b/tip/497.md
@@ -9,8 +9,8 @@
 	Keywords:       Tcl
 	Tcl-Version:    9.0
 	Tcl-Branch:     tip-497
-	Vote-Summary:	Accepted 5/0/1
-	Votes-For:		DKF, FV, JN, KW, SL
+	Vote-Summary:	Accepted 6/0/1
+	Votes-For:		DKF, FV, JN, KBK, KW, SL
 	Votes-Against:	none
 	Votes-Present:	DGP
 -----
