--- a/tip/562.md
+++ b/tip/562.md
@@ -8,10 +8,10 @@
 	Tcl-Version:    8.7
 	Keywords:       Tcl
 	Tcl-Branch:     deprecate-channel-type-1-4
-	Vote-Summary:	Accepted 3/0/3
+	Vote-Summary:	Accepted 3/0/4
 	Votes-For:		DGP, DKF, JN
 	Votes-Against:	none
-	Votes-Present:	FV, KW, SL
+	Votes-Present:	FV, KBK, KW, SL
 -----
 
 # Abstract
