--- a/tip/568.md
+++ b/tip/568.md
@@ -20,6 +20,34 @@ an _objPtr_ that does not contain a valid byte sequence.
 
 # Background
 
+It is a convention of the Tcl C interface to have routines with names
+like **Tcl_GetFooFromObj**. Their purpose is to extract a value in
+the _foo_ representation from a (_Tcl_Obj_ *) argument. The caller
+should then be able to process the extracted _foo_ value in the place
+of the *Tcl_Obj* value confident that it represents the original value.
+Each one of these routines is associated with one or more **Tcl_ObjType**s
+such that multiple calls to **Tcl_GetFooFromObj** can benefit from
+internal representation caching.
+
+These routines follow one of three patterns. The first,
+
+> _int_ **Tcl_GetFooFromObj**(*Tcl_Interp* *, *Tcl_Obj* *, ..., _foo_ *);
+
+is used when the *foo* representation is of fixed size that is not too large.
+The _int_ return allows for returning **TCL_ERROR** when no valid *foo*
+can be extracted. The *Tcl_Interp* is provided to receive standardized
+error messages and codes on failure.  The final output argument is a pointer
+to space where the extracted *foo* value may be written. (Foo = Boolean,
+Double, Index, Int, Long, WideInt, Encoding)
+
+(Bignum)
+
+The second pattern,
+
+> _foo_ **Tcl_GetFooFromObj**(*Tcl_Interp* *, *Tcl_Obj* *, ...);
+
+(Foo = RegExp, Command)
+
 
 
 # History and Rationale
