--- a/tip/568.md
+++ b/tip/568.md
@@ -22,7 +22,7 @@ an _objPtr_ that does not contain a valid byte sequence.
 
 It is a convention of the Tcl C interface to have routines with names
 like **Tcl_GetFooFromObj**. Their purpose is to extract a value in
-the _foo_ representation from a (_Tcl_Obj_ *) argument. The caller
+the _foo_ representation from a (*Tcl_Obj* *) argument. The caller
 should then be able to process the extracted _foo_ value in the place
 of the *Tcl_Obj* value confident that it represents the original value.
 Each one of these routines is associated with one or more **Tcl_ObjType**s
