--- a/tip/568.md
+++ b/tip/568.md
@@ -31,7 +31,7 @@ internal representation caching.
 
 These routines follow one of three patterns. The first,
 
-> _int_ **Tcl_GetFooFromObj**(*Tcl_Interp* *, *Tcl_Obj* *, ..., _foo_ *);
+> _int_ **Tcl_GetFooFromObj**(*Tcl_Interp* _*_, *Tcl_Obj* _*_, ..., _foo *_);
 
 is used when the *foo* representation is of fixed size that is not too large.
 The _int_ return allows for returning **TCL_ERROR** when no valid *foo*
