--- a/tip/568.md
+++ b/tip/568.md
@@ -47,7 +47,17 @@ The second pattern,
 
 > _foo_ **Tcl_GetFooFromObj**(*Tcl_Interp* _*_, *Tcl_Obj* _*_, ...);
 
-(Foo = RegExp, Command)
+is used when the *foo* representation is a token that can take on
+the value **NULL**.  In this case, a return of **NULL** by the routine
+signals the circumstance that no valid *foo* can be extracted. As in
+the first pattern, a *Tcl_Interp* is provided to receive standardized
+error messages and codes on failure. Documentation must be consulted
+to determine any constraints on the use of the returned token value by
+the caller.  It is likely to rely on information stored within the internal
+structures of Tcl, which may need management with reference counting,
+memory preservation, and/or maintaining a claim on the original *Tcl_Obj*.
+This pattern is followed in the cases where **Foo** is **RegExp**
+or **Command**.
 
 
 
