--- a/tip/568.md
+++ b/tip/568.md
@@ -59,7 +59,25 @@ memory preservation, and/or maintaining a claim on the original *Tcl_Obj*.
 This pattern is followed in the cases where **Foo** is **RegExp**
 or **Command**.
 
+The final pattern,
 
+> _foo_ **Tcl_GetFooFromObj**(*Tcl_Obj* _*_, _int *_);
+
+is used when the returned *foo* is a pointer value pointing into
+an array stored within Tcl's own structures.  It is implicit in the
+structure of the interface that it is presumed this extraction cannot
+fail. Thus there is no need to arrange for an interpreter to receive
+error messages or codes. The caller is instructed that the return value
+need not be checked for **NULL**. The final output argument is a pointer to
+space where the length of the *foo* array returned may be written.
+Documentation must be consulted to determine the conditions under which
+the caller my read, or even write, to that array. This pattern is
+followed in the cases where **Foo** is **String**, **Unicode**,
+or **ByteArray**.
+
+Again it must be understood that all of these routines have value only
+so far as they produce a *foo* value that caller can use in the place
+of operating directly on the *Tcl_Obj*.
 
 # History and Rationale
 
