--- a/tip/568.md
+++ b/tip/568.md
@@ -77,7 +77,9 @@ or **ByteArray**.
 
 Again it must be understood that all of these routines have value only
 so far as they produce a *foo* value that caller can use in the place
-of operating directly on the *Tcl_Obj*.
+of operating directly on the *Tcl_Obj*.  Experience has proven that
+the existing specification of the routine **Tcl_GetByteArrayFromObj**
+fails that test.
 
 # History and Rationale
 
