--- a/tip/569.md
+++ b/tip/569.md
@@ -2,7 +2,7 @@
 	Author:         Don Porter <dgp@users.sourceforge.net>
 	State:          Draft
 	Type:           Project
-	Vote:           Pending
+	Vote:           In progress
 	Created:        6-Mar-2020
 	Post-History:
 	Keywords:       lint
