--- a/tip/568.md
+++ b/tip/568.md
@@ -142,8 +142,18 @@ If anything causes the string representation to be generated, we lose this
 supplementary test, and we are back to being unable to use the byte sequence
 at all.
 
-Bug examples.
+This is tricky enough, callers of **Tcl_GetByteArrayFromObj** get it wrong,
+even the callers within Tcl itself.  See Tcl bugs [0e92c404f1] and
+[2637173] and this interactive demonstration:
 
+>	% info patch
+>	8.5.15
+>	% set s \u0141
+>	Ł
+>	% binary scan $s c x
+>	1
+>	% string index $s 0
+>	A
 
 # Specification
 
