--- a/tip/568.md
+++ b/tip/568.md
@@ -146,6 +146,8 @@ This is tricky enough, callers of **Tcl_GetByteArrayFromObj** get it wrong,
 even the callers within Tcl itself.  See Tcl bugs [0e92c404f1] and
 [2637173] and this interactive demonstration:
 
+<pre>
+```
 >	% info patch
 >	8.5.15
 >	% set s \u0141
@@ -154,6 +156,8 @@ even the callers within Tcl itself.  See Tcl bugs [0e92c404f1] and
 >	1
 >	% string index $s 0
 >	A
+```
+</pre>
 
 # Specification
 
