--- a/tip/568.md
+++ b/tip/568.md
@@ -190,7 +190,16 @@ In Tcl 8.7, create a new public routine,
 
 > _unsigned char *_ **Tcl_GetBytesFromObj**(*Tcl_Interp* _*_, *Tcl_Obj* _*_,  _int *_);
 
-which attempts to extract a byte sequence format of the value returns a pointer to a byte sequence
+which attempts to extract a byte sequence representation of the value. If
+the value contains any character outside the byte range, it does not have
+a valid representation as a byte sequence. In that circumstance, the
+value **NULL** is returned, and if the interpreter argument is not **NULL**,
+standard error messages and codes are left in it. Otherwise, a pointer
+to the byte sequence representation is returned (after creating it, if
+necessary) and the number of bytes in the sequence is written to the
+storage at the output pointer, which is not permitted to be **NULL**.
+
+
 
 
 # Compatibility
